--- a/app.css
+++ b/app.css
@@ -3,12 +3,14 @@
   max-width:100%;
   height: auto;
   background: aquamarine;
+  margin-left:auto;
+  margin-right:auto;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #title{
     display: block;
     text-align: center;
-    line-height: 200px;
     font-size: 200px;
     padding-bottom: 60px;
 }
@@ -16,7 +18,53 @@
 
 #image{
  display: block;
-max-width: 100%;
+width: 900px;
 height: auto;
+margin-left:auto;
+margin-right:auto;
   
+}
+#img-caption{
+
+    text-align: center;
+    padding-bottom:40px;
+    padding-top: 20px;
+    
+}
+#tribute-info{
+    padding-top:10px;
+
+}
+#merch{
+    font-family: Arial, Helvetica, sans-serif;
+    color:red;
+    font-weight:bolder;
+    text-align: center;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    border: 2px solid red;
+    border-radius: 25px;
+    width:30%;
+    font-size: 85%;
+    text-align: center;
+    background-color: ghostwhite;
+  
+
+}
+#merch2{
+    font-family: Arial, Helvetica, sans-serif;
+    color:red;
+    font-weight:bolder;
+    text-align: center;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    border: 2px solid red;
+    border-radius: 25px;
+    width:30%;
+    font-size: 85%;
+    text-align: center;
+    background-color: ghostwhite;
+
 }
